duniverse/menhirLib.20200211/test/static/bad/declaration-error-b.exp
File "declaration-error-b.mly", line 3, characters 10-11:
Error: syntax error inside a declaration.
Did you perhaps forget the %% that separates declarations and rules?
